# the-rosary-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  the-rosary.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  (+5 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  therosary_sdk.py  therosary_types.py
py/core/: context.py  control.py  result.py  spec.py  utility_type.py
py/entity/: get_rosary_by_day_entity.py  today_entity.py  v1n_entity.py
py/feature/: audit_feature.py  clienttrack_feature.py  debug_feature.py  metrics_feature.py  netsim_feature.py  paging_feature.py  ratelimit_feature.py  retry_feature.py  test_feature.py
py/test/: runner.py  test_exists.py  test_get_rosary_by_day_direct.py  test_get_rosary_by_day_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_today_direct.py  test_today_entity.py  test_v1n_direct.py  test_v1n_entity.py
py/utility/: done.py  feature_add.py  feature_hook.py  fetcher.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_request.py  make_response.py  make_result.py  make_spec.py  param.py  prepare_auth.py  prepare_headers.py  prepare_path.py  prepare_query.py  register.py  result_basic.py  result_headers.py  transform_response.py
(+463 files in other folders)
